--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <div id="runBtnView" class="w3-center">
                     <div class="w3-col s6 w3-center">
-                        <button id="settBtn" class="w3-button w3-margin-top w3-margin-bottom w3-padding-large w3-opacity-min w3-border w3-border-blue w3-text-blue w3-round-large w3-hover-blue w3-hover-opacity w3-light-card-inset">
+                        <button id="settBtn" class="w3-button w3-show-inline-block w3-margin-top w3-margin-bottom w3-padding-large w3-opacity-min w3-border w3-border-blue w3-text-blue w3-round-large w3-hover-blue w3-hover-opacity w3-light-card-inset">
                             <i class="fa fa-cog"></i>
                             <span class="w3-hide-small">&nbsp;Dictation Settings</span>
                         </button>
